--- a/quarto/precalc/functions.qmd
+++ b/quarto/precalc/functions.qmd
@@ -1305,7 +1305,7 @@ With this we can answer agequestions, such as:
 
 > How many stars can we see in the sky?
 
-Star [magnitude](https://en.wikipedia.org/wiki/Magnitude_(astronomy)) measures the brightness of celestial objects, with the sun on a log scale so that  a magnitude $1$ star is $100$ times brighter than a magnitude $6$ star. The sun has a value around $-27$, Sirius (the brightest visible star) around $-1.46), Venus around $-5$. We will take a magnitude of $6$ or brighter  for visibility. (magnitudes less than $6$). The value of $N(6)$ is then
+Star [magnitude](https://en.wikipedia.org/wiki/Magnitude_(astronomy)) measures the brightness of celestial objects, with the sun on a log scale so that  a magnitude $1$ star is $100$ times brighter than a magnitude $6$ star. The sun has a value around $-27$, Sirius (the brightest visible star) around $-1.46$), Venus around $-5$. We will take a magnitude of $6$ or brighter  for visibility. (magnitudes less than $6$). The value of $N(6)$ is then
 
 ```{julia}
 q(m) = -0.0003*m^3 + 0.0019*m^2 + 0.484*m - 3.82
@@ -1355,7 +1355,7 @@ If a star of magnitude $5$ difference is $100$ times brighter, what is the scale
 ```{julia}
 #| echo: false
 explanation = raw"""
-The base $a$ solve $\log_a(x + 5) / \log_a(x) = 100$. The logs can be combined and then $a$ can be solved for.
+The base $a$ solve $\log_a(100x) - \log_a(x) = 5$. The logs can be combined and then $a$ can be solved for.
 """
 choices = [raw"$5$",raw"$\sqrt[5]{100}$", raw"$\sqrt{100}$"]
 answer = 2
