--- a/quarto/precalc/numbers_types.qmd
+++ b/quarto/precalc/numbers_types.qmd
@@ -88,7 +88,7 @@ These values are *very* small numbers, but not exactly $0$, as they are mathemat
 ---
 
 
-The only  common issue is with powers. We saw this previously when discussing a distinction between `2^64` and `2.0^64. `Julia` tries to keep a predictable output from the input types (not their values). Here are the two main cases that arise where this can cause unexpected results:
+The only  common issue is with powers. We saw this previously when discussing a distinction between `2^64` and `2.0^64`. `Julia` tries to keep a predictable output from the input types (not their values). Here are the two main cases that arise where this can cause unexpected results:
 
 
 * integer bases and integer exponents can *easily* overflow. Not only `m^n` is always an integer, it is always an integer with a fixed storage size computed from the sizes of `m` and `n`. So the powers can quickly get too big. This can be especially noticeable on older $32$-bit machines, where too big is $2^{32} = 4,294,967,296$. On $64$-bit machines, this limit is present but much bigger.
@@ -643,7 +643,7 @@ Finding the value through division introduces a floating point deviation. Which 
 
 ```{julia}
 #| echo: false
-as = [`1/10^21`, `1e-21`]
+as = ["1/10^21", "1e-21"]
 explanation = "The scientific notation is correct. Due to integer overflow `10^21` is not the same number as `10.0^21`."
 buttonq(as, 2; explanation)
 ```
