--- a/quarto/precalc/plotting.qmd
+++ b/quarto/precalc/plotting.qmd
@@ -899,7 +899,7 @@ buttonq(["Yes", "No"], 1; explanation)
 ###### Question
 
 
-Make this parametric plot for the specific values of the parameters `k` and `l`. What shape best describes it?
+Make this parametric plot for the specific values of the parameters `R`, `r`, and `rho`. What shape best describes it?
 
 
 ```{julia}
