--- a/quarto/precalc/vectors.qmd
+++ b/quarto/precalc/vectors.qmd
@@ -264,7 +264,7 @@ plt = plot(legend=false, size=fig_size)
 arrow!(p0, [2,3], color="black")
 arrow!(p0, [2,0], color="orange")
 arrow!(p0+[2,0], [0,3], color="orange")
-annotate!(plt, collect(zip([.25, 1,1,1.75], [.25, 1.85,.25,1], [L"t",L"r", L"r \cdot \cos(t)", L"r \cdot \sin(t)"]))) #["θ","r", "r ⋅ cos(θ)", "r ⋅ sin(θ)"]
+annotate!(plt, collect(zip([.25, 1,1,1.75], [.15, 1.85,.25,1], [L"\theta",L"r", L"r \cdot \cos(\theta)", L"r \cdot \sin(\theta)"]))) #["θ","r", "r ⋅ cos(θ)", "r ⋅ sin(θ)"]
 
 imgfile = tempname() * ".png"
 png(plt, imgfile)
