--- a/quarto/staging/matrix-calculus-notes.qmd
+++ b/quarto/staging/matrix-calculus-notes.qmd
@@ -3,6 +3,9 @@
 XXX Add in examples from paper XXX
 optimization? large number of parameters? ,...
 
+
+Mention numerator layout from  https://en.wikipedia.org/wiki/Matrix_calculus#Layout_conventions
+
 ::: {.callout-note}
 ## Based on Bright, Edelman, and Johnson's notes
 
@@ -12,13 +15,13 @@ This section samples material from the notes [Matrix Calculus (for Machine Learn
 
 We have seen several "derivatives" of a function, based on the number of inputs and outputs. The first one was for functions $f: R \rightarrow R$.
 
-Then $f$ has a derivative at $x$ if this limit exists
+In this case, we saw that $f$ has a derivative at $c$ if this limit exists:
 
 $$
-\lim_{h \rightarrow 0}\frac{f(x + h) - f(x)}{h}.
+\lim_{h \rightarrow 0}\frac{f(c + h) - f(c)}{h}.
 $$
 
-The derivative of the function $x$ is this limit for a given $x$.  Common notation is:
+The derivative as a function of $x$ using this rule for any $x$ in the domain.  Common notation is:
 
 $$
 f'(x) = \frac{dy}{dx} = \lim_{h \rightarrow 0}\frac{f(x + h) - f(x)}{h}
@@ -27,9 +30,9 @@ $$
 (when the limit exists).
 
 
-This limit gets expressed in different ways:
+This limit gets re-expressed in different ways:
 
-* linearization write $f(x+\Delta x) - f(x) \approx f'(x)\Delta x$, where $\delta x$ is a small displacement from $x$. The reason there isn't equality is the unwritten higher order terms that vanish in a limit.
+* linearization writes $f(x+\Delta x) - f(x) \approx f'(x)\Delta x$, where $\Delta x$ is a small displacement from $x$. The reason there isn't equality is the unwritten higher order terms that vanish in a limit.
 
 * Alternate limits. Another way of writing this is in terms of explicit smaller order terms:
 
@@ -39,13 +42,15 @@ $$
 
 which means if we divide both sides by $h$ and take the limit, we will get $0$ on the right and the relationship on the left.
 
-* Differential notation simply writes this as $dy = f(x)dx$. More verbosely, we might write
+* Differential notation simply writes this as $dy = f'(x)dx$. Focusing on $f$ and not $y=f(x)$, we might write
 
 $$
 df = f(x+dx) - f(x) = f'(x) dx.
 $$
 
-Here $dx$ is a differential, made rigorous by a limit, which hides the higher order terms.
+We will see all the derivatives encountered so far can be similarly expressed.
+
+In the above, $df$ and $dx$ are differentials, made rigorous by a limit, which hides the higher order terms.
 
 
 In these notes the limit has been defined, with suitable modification, for functions of vectors (multiple values) with scalar or vector outputs.
@@ -53,7 +58,7 @@ In these notes the limit has been defined, with suitable modification, for funct
 
 For example, when $f: R \rightarrow R^m$ was a vector-valued function the derivative was defined similarly through a limit of $(f(t + \Delta t) - f(t))/{\Delta t}$, where each component needed to have a limit. This can be rewritten through $f(t + dt) - f(t) = f'(t) dt$, again using differentials to avoid the higher order terms.
 
-When $f: R^n \rightarrow R$ is a scalar-valued function of a derivative, differentiability was defined by a gradient existing with $f(c+h) - f(c) - \nabla{f}(c) \cdot h$ being $\mathscr{o}(\|h\|)$. In other words $df = f(c + dh) - f(c) = \nabla{f}(c) \cdot dh$. The gradient has the same shape as $c$, a column vector. If we take the row vector (e.g. $f'(c) = \nabla{f}(c)^T$) then again we see $df = f(c+dh) - f(c) = f'(c) dh$, where the last term uses matrix multiplication of a row vector times a column vector.
+When $f: R^n \rightarrow R$ is a scalar-valued function with vector inputs, differentiability was defined by a gradient existing with $f(c+h) - f(c) - \nabla{f}(c) \cdot h$ being $\mathscr{o}(\|h\|)$. In other words $df = f(c + dh) - f(c) = \nabla{f}(c) \cdot dh$. The gradient has the same shape as $c$, a column vector. If we take the row vector (e.g. $f'(c) = \nabla{f}(c)^T$) then again we see $df = f(c+dh) - f(c) = f'(c) dh$, where the last term uses matrix multiplication of a row vector times a column vector.
 
 Finally, when $f:R^n \rightarrow R^m$, the Jacobian was defined and characterized by
 $\| f(x + dx) - f(x) - J_f(x)dx \|$ being $\mathscr{o}(\|dx\|)$. Again, we can express this through $df = f(x + dx) - f(x) = f'(x)dx$ where $f'(x) = J_f(x)$.
@@ -61,7 +66,7 @@ $\| f(x + dx) - f(x) - J_f(x)dx \|$ being $\mathscr{o}(\|dx\|)$. Again, we can e
 
 In writing $df = f(x + dx) - f(x) = f'(x) dx$ generically, some underlying facts are left implicit: $dx$ has the same shape as $x$ (so can be added); $f'(x) dx$ may mean usual multiplication or matrix multiplication; and there is an underlying concept of distance and size that allows the above to be rigorous. This may be an abolute value or a norm.
 
-Further, various differentiation rules apply such as the sum, product, and chain rule.
+Further, various differentiation rules apply such as the sum, product, and chain rules.
 
 
 The @BrightEdelmanJohnson notes cover differentiation of functions in this uniform manner and then extend the form by treating derivatives as *linear operators*.
@@ -75,29 +80,35 @@ $$
 
 where the $\alpha$ and $\beta$ are scalars, and $v$ and $w$ possibly not and come from a *vector space*. Regular multiplication and matrix multiplication are familiar linear operations, but there are many others.
 
-The referenced notes identify $f'(x) dx$ with $f'(x)[dx]$, the latter emphasizing $f'(x)$ acts on $dx$ and the notation is not commutative (e.g., it is not $dx f'(x)$).
+The referenced notes identify $f'(x) dx$ as $f'(x)[dx]$, the latter emphasizing $f'(x)$ acts on $dx$ and the notation is not commutative (e.g., it is not $dx f'(x)$). The use of $[]$ is to indicate that $f'(x)$ "acts" on $dx$ in a linear manner. It may be multiplication, matrix multiplication, or something else. Parentheses are not used which might imply function application or multiplication.
+
+
+
+
 
 Linear operators are related to vector spaces.
 
 A [vector space](https://en.wikipedia.org/wiki/Vector_space) is a set of mathematical objects which can be added together and also multiplied by a scalar. Vectors of similar size, as previously discussed, are the typical example, with vector addition and scalar multiplication previously discussed topics. Matrices of similar size (and some subclasses) also form a vector space. Additionally, many other set of objects form vector spaces. An example might be polynomial functions of degree $n$ or less; continuous functions, or functions with a certain number of derivatives.
 
-Take differentiable functions as an example, then the simplest derivative rules $[af(x) + bg(x)]' = a[f(x)]' + b[g(x)]'$ show the linearity of the derivative in this setting. This linearity is different from how the derivative is a linear operator on $dx$.
+Take differentiable functions as an example, then the simplest derivative rules $[af(x) + bg(x)]' = a[f(x)]' + b[g(x)]'$ show the linearity of the derivative in this setting.
 
-A vector space is described by a *basis* -- a minimal set of vectors needed to describe the space, after consideration of linear combinations. For many vectors, this the set of special vectors with $1$ as one of the entries, and $0$ otherwise.
+A finite vector space is described by a *basis* -- a minimal set of vectors needed to describe the space, after consideration of linear combinations. For some typical vector spaces, this the set of special vectors with $1$ as one of the entries, and $0$ otherwise.
 
-A key fact about a basis is every vector in the vector space can be expressed *uniquely* as a linear combination of the basis vectors.
+A key fact about a basis for a finite vector space is every vector in the vector space can be expressed *uniquely* as a linear combination of the basis vectors.
 
 Vectors and matrices have properties that are generalizations of the real numbers. As vectors and matrices form vector spaces, the concept of addition of vectors and matrices is defined, as is scalar multiplication. Additionally, we have seen:
 
 * The dot product between two vectors of the same length is defined easily ($v\cdot w = \Sigma_i v_i w_i$). It is coupled with the length as $\|v\|^2 = v\cdot v$.
 
-* Matrix multiplication is defined for two properly sized matrices. If $A$ is $m \times k$ and $B$ is $k \times n$ then $AB$ is a $m\times n$ matrix with $(i,j)$ term given by the dot product of the $i$th row of $A$ (viewed as a vector) and the $j$th column of $B$ (viewed as a vector). Matrix multiplication is associative but *not* commutative. (E.g. $(AB)C = A(BC)$ but $AB$ and $BA$ need not be equal (or even defined, as the shapes may not match up).
+* Matrix multiplication is defined for two properly sized matrices. If $A$ is $m \times k$ and $B$ is $k \times n$ then $AB$ is a $m\times n$ matrix with $(i,j)$ term given by the dot product of the $i$th row of $A$ (viewed as a vector) and the $j$th column of $B$ (viewed as a vector). Matrix multiplication is associative but *not* commutative. (E.g. $(AB)C = A(BC)$ but $AB$ and $BA$ need not be equal, or even defined, as the shapes may not match up).
 
-* A square matrix $A$ has an *inverse* $A^{-1}$ if $AA^{-1} = A^{-1}A = I$, where $I$ is the identity matrix (a matrix which is zero except on its diagonal entries which are all $1$). Square matrices may or may not have an inverse. When they don't the matrix is called singular.
+* A square matrix $A$ has an *inverse* $A^{-1}$ if $AA^{-1} = A^{-1}A = I$, where $I$ is the identity matrix (a matrix which is zero except on its diagonal entries, which are all $1$). Square matrices may or may not have an inverse. A matrix without an inverse is called *singular*.
 
 * Viewing a vector as a matrix is possible. The association is typically through a *column* vector.
 
-* The transpose of a matrix comes by permuting the rows and columns. The transpose of a column vector is a row vector, so $v\cdot w = v^T w$, where we use a  superscript $T$ for the transpose. The transpose of a product, is the product of the transposes -- reversed: $(AB)^T = B^T A^T$; the tranpose of a transpose is an identity operation: $(A^T)^T = A$; the inverse of a transpose is the tranpose of the inverse: $(A^{-1})^T = (A^T){-1}$.
+* The *transpose* of a matrix comes by permuting the rows and columns. The transpose of a column vector is a row vector, so $v\cdot w = v^T w$, where we use a  superscript $T$ for the transpose. The transpose of a product, is the product of the transposes -- reversed: $(AB)^T = B^T A^T$; the tranpose of a transpose is an identity operation: $(A^T)^T = A$; the inverse of a transpose is the tranpose of the inverse: $(A^{-1})^T = (A^T)^{-1}$.
+
+* The *adjoint* of a matrix is related to the transpose, only complex conjugates are also taken.
 
 * Matrices for which $A = A^T$ are called symmetric.
 
@@ -377,20 +388,20 @@ XXXX
 
 What is the the derivative of $f(A) = A^2$?
 
-The function $f$ takes a $n\times n$ matrix and returns a matrix of the same size. This innocuous question isn't directly
-handled by the Jacobian, which is defined for vector valued function $f:R^n \rightarrow R^m$.
+The function $f$ takes a $n\times n$ matrix and returns a matrix of the same size. This innocuous question isn't directly handled, here, by the Jacobian, which is defined for vector-valued functions $f:R^n \rightarrow R^m$.
 
 This derivative can be derived directly from the *product rule*:
 
 $$
 \begin{align*}
-f(A) &= [AA]'\\
+f'(A) &= [AA]'\\
 &= A dA + dA A
 \end{align*}
 $$
 
 That is $f'(A)$ is the operator $f'(A)[\delta A] = A \delta A + \delta A A$ and not $2A\delta A$, as $A$ may not commute with $\delta A$.
 
+XXX THIS ISN"T EVEN RIGHT
 
 ### Vectorization of a matrix
 
