--- a/quarto/misc/quick_notes.qmd
+++ b/quarto/misc/quick_notes.qmd
@@ -981,7 +981,7 @@ vcat([diff.(ex, [u,v])' for ex in F(u,v)]...)
 ### Divergence
 
 
-Numerically, the divergence can be computed from the Jacobian by adding the diagonal elements. This is a numerically inefficient, as the other partial derivates must be found and discarded, but this is generally not an issue for these notes. The following uses `tr` (the trace from the `LinearAlgebra` package) to find the sum of a diagonal.
+Numerically, the divergence can be computed from the Jacobian by adding the diagonal elements. This is a numerically inefficient, as the other partial derivatives must be found and discarded, but this is generally not an issue for these notes. The following uses `tr` (the trace from the `LinearAlgebra` package) to find the sum of a diagonal.
 
 
 ```{julia}
