--- a/quarto/precalc/polynomial.qmd
+++ b/quarto/precalc/polynomial.qmd
@@ -39,7 +39,7 @@ A *polynomial* is a sum of monomials. After combining terms with same powers, a 
 
 
 $$
-a_n x^n + a_{n-1}x^{n-1} + \cdots a_1 x + a_0, \quad a_n \neq 0
+a_n x^n + a_{n-1}x^{n-1} + \cdots + a_1 x + a_0, \quad a_n \neq 0
 $$
 
 ```{julia}
@@ -343,7 +343,7 @@ pp = lambdify(p)
 pp(2)
 ```
 
-The `lambdify` function uses the name of the similar `SymPy` function which is named after Python's convention of calling anoynmous function "lambdas." The use above is straightforward. Only slightly more complicated is the use when there are multiple symbolic values. For example:
+The `lambdify` function uses the name of the similar `SymPy` function which is named after Python's convention of calling anonymous function "lambdas." The use above is straightforward. Only slightly more complicated is the use when there are multiple symbolic values. For example:
 
 
 ```{julia}
@@ -379,7 +379,7 @@ This graph illustrates the key features of polynomial graphs:
 
 
   * there may be values for `x` where the graph crosses the $x$ axis (real roots of the polynomial);
-  * there may be peaks and valleys (local maxima and local minima)
+  * there may be peaks and valleys (local maxima and local minima);
   * except for constant polynomials, the ultimate behaviour for large values of $|x|$ is either both sides of the graph going to positive infinity, or negative infinity, or as in this graph one to the positive infinity and one to negative infinity. In particular, there is no *horizontal asymptote*.
 
 
@@ -513,7 +513,7 @@ This observation is the start of Descartes' rule of [signs](http://sepwww.stanfo
 Among numerous others, there are two common ways of representing a non-zero polynomial:
 
 
-  * expanded form, as in $a_n x^n + a_{n-1}x^{n-1} + \cdots a_1 x + a_0, a_n \neq 0$; or
+  * expanded form, as in $a_n x^n + a_{n-1}x^{n-1} + \cdots + a_1 x + a_0, a_n \neq 0$; or
   * factored form, as in $a\cdot(x-r_1)\cdot(x-r_2)\cdots(x-r_n), a \neq 0$.
 
 
