--- a/quarto/precalc/rational_functions.qmd
+++ b/quarto/precalc/rational_functions.qmd
@@ -159,7 +159,7 @@ Similarly, a plot over $[-100, -10]$ would show decay towards $0$, though in tha
 We can easily do most of this analysis without needing a computer or algebra. First, we should know the four eventual shapes of a polynomial, that the graph of $y=mx$ is a line with slope $m$, the graph of $y = c$ is a constant line at height $c$, and the graph of $y=c/x^m$, $m > 0$ will decay towards $0$ as $x \rightarrow \pm\infty$. The latter should be clear, as $x^m$ gets big, so its reciprocal goes towards $0$.
 
 
-The factored form, as $p$ is presented, is a bit hard to work with, rather we use the expanded form, which we get through the `cancel` function
+The factored form, as $h$ is presented, is a bit hard to work with, rather we use the expanded form, which we get through the `cancel` function
 
 
 ```{julia}
@@ -179,7 +179,7 @@ The terms $(1 - 4/x + 5/x^2 - 2/x^3)$ and $(1 - 9/x^2)$ go towards $1$ as $x \ri
 Just by looking at the ratio of the two leading terms, the behaviour as $x \rightarrow \pm \infty$ can be discerned. If this ratio is of:
 
 
-  * the form $c x^m$ with $m > 1$ then the shape will follow the polynomial growth of of the monomial $c x^m$.
+  * the form $c x^m$ with $m > 1$ then the shape will follow the polynomial growth of the monomial $c x^m$.
   * the form $c x^m$ with  $m=1$ then there will be a line with slope $c$ as a *slant asymptote*.
   * the form $cx^0$ with  $m=0$ (or just $c$) then there will be a *horizontal asymptote* $y=c$.
   * the form $c/x^{m}$ with $m  >  0$ then there will be a horizontal asymptote $y=0$, or the $y$ axis.
@@ -266,7 +266,7 @@ $$
 \frac{(x-2)^3\cdot(x-4)\cdot(x-3)}{(x-5)^4 \cdot (x-6)^2}.
 $$
 
-By looking at the powers we can see that the leading term of the numerator will the $x^5$ and the leading term of the denominator $x^6$. The ratio is $1/x^1$. As such, we expect the $x$-axis as a horizontal asymptote:
+By looking at the powers we can see that the leading term of the numerator will the $x^5$ and the leading term of the denominator $x^6$. The ratio is $1/x^1$. As such, we expect the $x$-axis as a horizontal asymptote.
 
 
 #### Partial fractions
